<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <com.ratio.common.views.FontableTextView
        style="@style/CCHeaderText"
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/reward"
        android:background="@color/cc_cardview_bg_color" />

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cc_cardview_bg_color"
        android:gravity="center_horizontal">
	    <ImageView
	        android:id="@+id/ivImage"
	        android:layout_width="331dp"
	        android:layout_height="221dp"
	        android:src="@drawable/subway" 
	        android:background="@color/cc_cardview_bg_color"/>
    </LinearLayout>

    <com.ratio.common.views.FontableTextView
        style="@style/CCLightText"
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reward_description"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@color/cc_cardview_bg_color" />
    
    <com.ratio.common.views.FontableTextView
        style="@style/CCHeaderTextLite"
        android:id="@+id/tv_Bonus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/daily_bonus"
        android:background="@color/cc_cardview_bg_color" />
    
    <com.ratio.common.views.FontableTextView
        style="@style/CCLightText"
        android:id="@+id/tvBonusDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/daily_bonus_description"
        android:background="@color/cc_cardview_bg_color" />
    
    <include
        android:id="@+id/cc_cardview" 
        style="@style/CCCardViewBg"
        layout="@layout/cc_cardview"/>

</LinearLayout>
