<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:paddingTop="10dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp" >
    
    <com.ratio.common.views.FontableTextView
        android:id="@+id/title"
        style="@style/CCCardViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/active_ride"
        android:background="@color/cc_cardview_bg_color" />
    
    <com.ratio.common.views.FontableTextView
        android:id="@+id/subtext1"
        style="@style/CCCardViewSubtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:text="@string/three_riders"
        android:background="@color/cc_cardview_bg_color" />
    
    <com.ratio.common.views.FontableTextView
        android:id="@+id/subtext2"
        style="@style/CCCardViewSubtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subtext1"
        android:paddingBottom="10dp"
        android:text="@string/fifteen_to_arrival"
        android:background="@color/cc_cardview_bg_color" />
    
    <ImageView 
        android:id="@+id/btn"
        style="@style/CCCardViewButton"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentRight="true"
        android:src="@drawable/gps_button"
        android:layout_alignBottom="@+id/subtext2"
        android:background="@color/cc_cardview_bg_color"/>
 
</RelativeLayout>
